style.css
html
{
    background-image: url("img/backgroundpattern.png");
    background-repeat: repeat-y repeat-x;
}

body {
    background-image: url("img/backgroundpattern.png");
    background-repeat: repeat-y repeat-x;
    font-family: "Georgia", Times, serif;

  }


#wholepage {
    padding-top: 0px;
    padding-right: 50px;
    padding-bottom: 5px;
    padding-left: 50px;
  }

.carousel .item.left img{
    height: 400px !important;
    width: 100% !important;
}

.navbar-expand-md {
    background-color: #1E7ACC; 
    border-color: #030033;
}

.navbar-nav {
    color: white;
}

.jumbotron {
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
  }

.navbar-brand {
    line-height:6px;
    padding-top:0px;
    padding-bottom:0px;
  }
  
.navbar-brand small {
    color: white;
    display:block;
    font-size:12px;
  }

.navbar-link {
    color: white;
    display:block;
    font-size:12px;
  }

nav .navbar-nav li a{
    color: white !important;
    }

  .collapse {
      color: white;
  }

  .card-body {
    width=100%;
    height=100%;
  }
  .firstcharacter {
    color: #1E7ACC;
    float: left;
    font-family: Georgia;
    font-size: 75px;
    line-height: 60px;
    padding-top: 4px;
    padding-right: 8px;
    padding-left: 3px;
  }

/*--- Slideshow ---*/
.mySlides {display:none;}
    

  /*---Image Gallery ---*/

*{
    margin: 0%;
    padding: 0%;
    font-family: "Georgia";
    box-sizing: border-box;
}

.gallery-section{
    width: 100%;
    padding: 0px 0;
    background: #f1f1f1;
}

.inner-width{
    width: 100%;
    max-width: 1200px;
    margin: auto;
    padding: 0 20;
}

.gallery-section h1{
    text-align: center;
    text-transform: uppercase;
    color: #333;
}

.border{
    width: 180px;
    height: 4px;
    background: #333;
    margin: 60px auto;
}

.gallery-section .gallery{
    display: flex;
    flex-wrap: wrap-reverse;
    justify-content: center;
}

.gallery-section .image{
    flex: 25%;
    overflow: hidden;
    cursor: pointer;
}

.gallery-section .image img{
    width: 100%;
    height: 100%;
    transition: 0.4s;
}

.gallery-section .image:hover img{
    transform: scale(1.4) rotate(15deg);
}

@media screen and (max-width:960px) {
    .gallery-section .image{
        flex: 33.33%;
    }
}

@media screen and (max-width:768px) {
    .gallery-section .image{
        flex: 50%;
    }
}

@media screen and (max-width:480px) {
    .gallery-section .image{
        flex: 100%;
    }
}


/*--- Footer ---*/

.site-footer {
    background: #1E7ACC;
  }
  
  #footer-content {
    background: #1E7ACC;
  }
  

@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');











/*---Media Queries ---*/
@media (max-width: 992px) {

    }
@media (max-width: 768px) {

    }
@media (max-width: 576px) {

    }


/*---Firefox Bug Fix ---*/
.carousel-item {
    transition: -webkit-transform 0.5s ease;
    transition: transform 0.5s ease;
    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
    -webkit-backface-visibility: visible;
    backface-visibility: visible;
}
/*--- Fixed Background Image ---*/
figure {
    position: relative;
    width: 100%;
    height: 60%;
    margin: 0!important;
}
.fixed-wrap {
    clip: rect(0, auto, auto, 0);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
#fixed {
    background-image: url('img/logo.png');
    position: fixed;
    display: block;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center center;
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    will-change: transform;
}
/*--- Bootstrap Padding Fix ---*/
[class*="col-"] {
    padding: 1rem;
}





/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (mind-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

